@@ -414,19 +414,28 @@ static int socket_look_ahead_u8(SgObject self)
 
 static int64_t socket_read_u8(SgObject self, uint8_t *buf, int64_t size)
 {
-  int readSize;
+  /* we need to read eagarly, or else something wrong happen. */
+  int readSize = 0;
   if (SG_PORT_HAS_U8_AHEAD(self) && size > 0) {
     buf[0] = SG_PORT_U8_AHEAD(self);
     SG_PORT_U8_AHEAD(self) = EOF;
     buf++;
     size--;
+    readSize++;
   }
-  readSize = Sg_SocketReceive(SG_PORT_SOCKET(self), buf, size, 0);
-  if (-1 == readSize) {
-    Sg_IOReadError(SG_INTERN("read-u8"),
-		   Sg_GetLastErrorMessageWithErrorCode(SG_PORT_SOCKET(self)->lastError),
-		   self);
-    return -1;
+  for (;;) {
+    int now = Sg_SocketReceive(SG_PORT_SOCKET(self), buf, size, 0);
+    if (-1 == now) {
+      Sg_IOReadError(SG_INTERN("read-u8"),
+		     Sg_GetLastErrorMessageWithErrorCode(SG_PORT_SOCKET(self)->lastError),
+		     self);
+      return -1;
+    }
+    size -= now;
+    readSize += now;
+    if (now == 0) return readSize;
+    if (size == 0) break;
+    /* loop */
   }
   return readSize;
 }
